[package]
name = "bubo"
version = "0.1.0"
authors = ["Daniil Novikov"]
edition = "2018"

[dependencies]
futures-util = { version = "0.3.21", features = ["default"] }
hex = { version = "0.4.3", features = ["default"] }
hmac-sha256 = { version = "1.1.4", features = ["default"] }
itertools = { version = "0.10.3", features = ["default"] }